# detail-page-forge

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
data/d1000_knowledge/: d1000_principles_knowledge.json  knowledge_manifest.json
data/d1000_knowledge/pinterest/: index.json
data/d1000_knowledge/transcripts/: insights_index.json  lecture_01_1.json  lecture_02_2.json  lecture_03_1.json  lecture_04_2.json  lecture_05_1.json  lecture_06_2.json  lecture_07_1.json  lecture_08_2.json  lecture_09_1.json  lecture_10_2.json  lecture_11_1.json  lecture_12_2.json  lecture_13_1.json  lecture_14_2.json  lecture_15_1.json  lecture_16_2.json  lecture_17_1.json  lecture_18_2.json  lecture_19_1.json  lecture_20_2.json  lecture_21_1.json  lecture_22_2.json  lecture_23_1.json  lecture_24_2.json  lecture_25_1.json  lecture_26_2.json  lecture_27_1.json  lecture_28_2.json  lecture_29_1.json  lecture_30_2.json  lecture_31_1.json  lecture_32_2.json  lecture_33_1.json  lecture_34_2.json  lecture_35_1.json  lecture_36_2.json  lecture_37_1.json  lecture_38_2.json  lecture_39_1.json  (+53 more)
data/technique_system/: technique_atoms.json  technique_compounds.json  technique_workflows.json
data/templates/: index.json
data/templates/_staging/: d1000-part2-1-3.html  d1000-part2-1-3.json  d1000-template-1-1012.html  d1000-template-1-1012.json  d1000-template-1-102.html  d1000-template-1-102.json  d1000-template-1-1026.html  d1000-template-1-1026.json  d1000-template-1-1049.html  d1000-template-1-1049.json  d1000-template-1-1062.html  d1000-template-1-1062.json  d1000-template-1-1569.html  d1000-template-1-1569.json  d1000-template-1-287.html  d1000-template-1-287.json  progress.json  template_1_1068.html  template_1_1068.json  template_1_1073.html  template_1_1073.json  template_1_1081.html  template_1_1081.json  template_1_1087.html  template_1_1087.json  template_1_1096.html  template_1_1096.json  template_1_1104.html  template_1_1104.json  (+97 more)
scripts/: convert_figma_templates.py  tag_pinterest_d1000.py  tag_pinterest_keywords.py  tag_pinterest_v2.py  transcribe_d1000.py
src/detail_forge/: __init__.py  config.py  exceptions.py
tests/: conftest.py  test_api.py  test_api_errors.py  test_asset_pipeline.py  test_config.py  test_copywriter.py  test_d1000_principles.py  test_db.py  test_design_tokens.py  test_error_handling.py  test_exceptions.py  test_html_renderer.py  test_one_click.py  test_output.py  test_providers.py  test_reviewer.py  test_synthesis.py  test_templates.py  test_ui.py
tests/benchmarks/: conftest.py  test_bench_designer.py  test_bench_memory.py  test_bench_output.py  test_bench_synthesis.py  test_bench_templates.py
ui/: app.py  theme.py
(+684 files in other folders)
