[project]
name = "detail-forge"
version = "0.1.0"
description = "AI-powered e-commerce product detail page generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
    "streamlit>=1.41.0",
    "playwright>=1.49.0",
    "Pillow>=11.0.0",
    "rembg>=2.0.62",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "selectolax>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# HTML template strings and data files have long lines by nature
"src/detail_forge/designer/html_renderer.py" = ["E501"]
"src/detail_forge/designer/d1000_principles.py" = ["E501"]
"scripts/*.py" = ["E501", "E402"]
"ui/app.py" = ["E501"]
"tests/*.py" = ["E501"]
"tests/benchmarks/*.py" = ["E501"]
"src/detail_forge/config.py" = ["E501"]
"src/detail_forge/copywriter/generator.py" = ["E501"]
"src/detail_forge/designer/image_generator.py" = ["E501"]
"src/detail_forge/reviewer/exporter.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.benchmark]
# pytest-benchmark configuration
# Run only benchmarks: pytest --benchmark-only
# Exclude benchmarks: pytest --benchmark-disable  (or --benchmark-skip)
warmup = true
warmup_iterations = 5
min_rounds = 10
timer = "time.perf_counter"
sort = "name"
disable_gc = false
save = ".benchmarks"

[dependency-groups]
dev = [
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=7.0.0",
]
